# Tumor_Segmentation

./: README.md  Tumor_Segmentation.s4ext
Tumor_Segmentation/: CMakeLists.txt
Tumor_Segmentation/Resources/Models/: unet.onnx
Tumor_Segmentation/Tumor_Segmentation/: CMakeLists.txt  Tumor_Segmentation.py
Tumor_Segmentation/Tumor_Segmentation/Resources/UI/: Tumor_Segmentation.ui
lib/Slicer-5.10/qt-scripted-modules/: Tumor_Segmentation.py
lib/Slicer-5.10/qt-scripted-modules/Resources/: Tumorsegmetation_.json
share/Slicer-5.10/: Tumor_Segmentation.s4ext
